<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="14dp"
        android:background="@drawable/bg_home_profile"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/img_content_desc_profile_icon"
        android:src="@drawable/profile"
        android:tint="?colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="?textAppearanceTitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/say_hi_profile"
        android:textColor="?colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_home_profile_text"
            android:padding="20dp"
            android:text="@string/edit_username"
            android:textColor="?colorOnBackground"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_home_profile_text"
            android:padding="20dp"
            android:text="@string/buy_coin"
            android:textColor="?colorOnBackground"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_home_profile_text"
            android:padding="20dp"
            android:text="@string/rate_us"
            android:textColor="?colorOnBackground"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_home_profile_text"
            android:padding="20dp"
            android:text="@string/support_us"
            android:textColor="?colorOnBackground"
            android:textStyle="bold" />


    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />


</androidx.constraintlayout.widget.ConstraintLayout>