<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.challenge.ChallengeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="?textAppearanceTitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:layout_marginEnd="14sp"
            android:layout_marginBottom="6dp"
            android:text="@string/challenge_page"
            android:textStyle="bold" />

        <TextView
            style="?textAppearanceBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:layout_marginEnd="14sp"
            android:text="@string/challenge_page_description"
            android:textColor="?colorOnPrimaryContainer"
            android:textSize="10sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="12dp"
        android:text="@string/add_challenge"
        android:textColor="@color/white"
        app:icon="@drawable/add"
        app:iconTint="@color/white" />
</FrameLayout>